--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,6 +710,101 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
+.cid-s5AqorpIO3 {
+  background-image: url("../../../assets/images/background4.jpg");
+}
+.cid-s5ASE2fu2r {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s5ASE2fu2r .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-s5ASE2fu2r .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-s5ASE2fu2r .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
+}
+.cid-s5ASE2fu2r .card-front {
+  z-index: 2;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.cid-s5ASE2fu2r .card-front img {
+  height: 100%;
+  min-width: 100%;
+  width: auto;
+}
+.cid-s5ASE2fu2r .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #55b4d4;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-s5ASE2fu2r .card {
+  min-height: 300px;
+}
+.cid-s5ASE2fu2r .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-s5ASE2fu2r .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-s5ASE2fu2r .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-s5ASE2fu2r .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-s5ASE2fu2r P {
+  text-align: center;
+}
 .cid-s5AE6IKrnZ {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1117,9 +1212,6 @@ section.lazy-placeholder:after {
 .cid-s5AqiJhauf .nav-link:hover,
 .cid-s5AqiJhauf .dropdown-item:hover {
   color: #c1c1c1 !important;
-}
-.cid-s5AqorpIO3 {
-  background-image: url("../../../assets/images/background4.jpg");
 }
 .cid-s5Ar7I1nBS {
   padding-top: 45px;
